@@ -11,6 +11,13 @@
 
 #include "common.h"
 
+enum class StaffSpeedCheat
+{
+    None,
+    Frozen,
+    Fast,
+};
+
 extern bool gCheatsSandboxMode;
 extern bool gCheatsDisableClearanceChecks;
 extern bool gCheatsDisableSupportLimits;
@@ -36,6 +43,7 @@ extern bool gCheatsAllowTrackPlaceInvalidHeights;
 extern bool gCheatsAllowRegularPathAsQueue;
 extern bool gCheatsAllowSpecialColourSchemes;
 extern bool gCheatsMakeAllDestructible;
+extern StaffSpeedCheat gCheatsSelectedStaffSpeed;
 
 enum class CheatType : int32_t
 {
